adj admin get post
